--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react-lottie",
-  "version": "1.2.3",
+  "name": "react-lottie-test",
+  "version": "1.2.4",
   "description": "lottie animation view for React",
   "repository": {
     "type": "git",
